# cyclity

./: LICENSE
backend/app/: README.md  prestart.sh  pyproject.toml
backend/app/alembic/: env.py
backend/app/alembic/versions/: 4383d2991afc_add_user_table.py  91211d6cd2b8_add_is_superuser_to_user_table.py  9aeca22d776a_add_uid_and_hashed_pwd_to_user_table.py  ab8c012047ad_update_user_table.py
backend/app/app/: .test.env  config.py  database.py  initial_data.py  main.py  router.py  utils.py
backend/app/app/api/: deps.py
backend/app/app/api/api_v1/endpoints/: login.py  users.py
backend/app/app/core/: security.py
backend/app/app/crud/: __init__.py  base.py  user.py
backend/app/app/db/: base_class.py  init_db.py  session.py
backend/app/app/models/: __init__.py  user.py
backend/app/app/schemas/: __init__.py  user.py
backend/app/app/tests/: conftest.py
backend/app/app/tests/api/: __init__.py
backend/app/app/tests/api/api_v1/: test_login.py  test_user.py
backend/app/app/tests/crud/: test_user.py
backend/app/app/tests/utils/: user.py  utils.py
backend/app/scripts/: test.sh
frontend/: package.json  vite.config.ts
frontend/src/: App.vue  App1.vue  main.ts  vite-env.d.ts
frontend/src/components/: AppBarToggleDarkMode.vue  HomeWallpaper.vue  ToolbarProgressIndicator.vue
frontend/src/layouts/: HomeLayout.vue
frontend/src/plugins/: vuetify.ts
frontend/src/router/: AuthRoutes.ts  HomeRoutes.ts  MainRoutes.ts  index.ts
frontend/src/stores/: AuthStore.ts  ConfigStore.ts  UIStore.ts  index.ts
frontend/src/styles/: shared-styles.scss
(+28 files in other folders)
